--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Emmy Company</title>
+    <title>AKINRINOLA Company</title>
 </head>
 
 <body>
@@ -83,21 +83,21 @@
         <div class="images">
             <div class="img">
                 <img src="images/pic03.jpg">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing <br>
                     voluptatem enim dolor fuga <br>
                     aspernatur</p>
                 <button><a href="index.html">Learn More </a></button>
             </div>
             <div class="img">
                 <img src="images/pic04.jpg">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing <br>
                     voluptatem enim dolor fuga <br>
                     aspernatur</p>
                 <button><a href="index.html">Learn More </a></button>
             </div>
             <div class="img">
                 <img src="images/pic05.jpg">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing <br>
                     voluptatem enim dolor fuga <br>
                     aspernatur</p>
                 <button><a href="index.html">Learn More </a></button>
